kubernetes/infra/monitoring/kube-prometheus-stack/_base/cluster-netpol.yaml
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-prometheus-scrape-ingress
spec:
  description: "Allow Prometheus in monitoring namespace to scrape metrics cluster-wide"
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector:
    matchExpressions:
      - key: io.kubernetes.pod.namespace
        operator: NotIn
        values:
          - kube-system
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-prometheus-scrape-egress
spec:
  description: "Allow Prometheus to scrape metrics cluster-wide"
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: monitoring
      app.kubernetes.io/name: prometheus
  egress:
    - toEntities:
        - cluster
